@@ -1,8 +1,6 @@
 package com.hamcam.back.service.community.friend;
 
-import com.hamcam.back.dto.community.friend.request.FriendAcceptRequest;
-import com.hamcam.back.dto.community.friend.request.FriendRejectRequest;
-import com.hamcam.back.dto.community.friend.request.FriendRequestSendRequest;
+import com.hamcam.back.dto.community.friend.request.*;
 import com.hamcam.back.dto.community.friend.response.*;
 import com.hamcam.back.dto.community.report.request.ReportRequest;
 import com.hamcam.back.entity.auth.User;
@@ -10,16 +8,12 @@ import com.hamcam.back.entity.friend.*;
 import com.hamcam.back.global.exception.CustomException;
 import com.hamcam.back.global.exception.ErrorCode;
 import com.hamcam.back.repository.auth.UserRepository;
-import com.hamcam.back.repository.friend.FriendBlockRepository;
-import com.hamcam.back.repository.friend.FriendReportRepository;
-import com.hamcam.back.repository.friend.FriendRepository;
-import com.hamcam.back.repository.friend.FriendRequestRepository;
+import com.hamcam.back.repository.friend.*;
 import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Service;
 
 import java.time.LocalDateTime;
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
@@ -31,88 +25,85 @@ public class FriendService {
     private final FriendReportRepository friendReportRepository;
     private final UserRepository userRepository;
 
+    /** ✅ 친구 요청 전송 */
     public void sendFriendRequest(FriendRequestSendRequest request) {
-        User sender = userRepository.findById(request.getSenderId())
-                .orElseThrow(() -> new CustomException(ErrorCode.USER_NOT_FOUND));
-        User receiver = userRepository.findById(request.getTargetUserId())
-                .orElseThrow(() -> new CustomException(ErrorCode.USER_NOT_FOUND));
+        User sender = getUser(request.getUserId());
+        User receiver = getUser(request.getTargetUserId());
 
-        if (sender.getId().equals(receiver.getId())) {
-            throw new CustomException("자기 자신에게 친구 요청을 보낼 수 없습니다.");
-        }
-
-        if (friendRepository.existsByUserAndFriend(sender, receiver) ||
-                friendRepository.existsByUserAndFriend(receiver, sender)) {
-            throw new CustomException("이미 친구 관계입니다.");
-        }
-
-        if (friendRequestRepository.existsBySenderAndReceiver(sender, receiver)) {
-            throw new CustomException("이미 친구 요청을 보냈습니다.");
-        }
+        validateNotSelf(sender, receiver);
+        validateNotAlreadyFriend(sender, receiver);
+        validateNotAlreadyRequested(sender, receiver);
 
         friendRequestRepository.save(FriendRequest.builder()
                 .sender(sender)
                 .receiver(receiver)
+                .message(request.getMessage())
                 .build());
     }
 
+    /** ✅ 친구 요청 수락 */
     public void acceptFriendRequest(FriendAcceptRequest request) {
-        User receiver = userRepository.findById(request.getReceiverId())
-                .orElseThrow(() -> new CustomException(ErrorCode.USER_NOT_FOUND));
-        User sender = userRepository.findById(request.getRequestId())
-                .orElseThrow(() -> new CustomException(ErrorCode.USER_NOT_FOUND));
+        User receiver = getUser(request.getUserId());
+        FriendRequest fr = getFriendRequestById(request.getRequestId());
 
-        FriendRequest friendRequest = friendRequestRepository
-                .findBySenderAndReceiver(sender, receiver)
-                .orElseThrow(() -> new CustomException("친구 요청이 존재하지 않습니다."));
-
-        friendRepository.save(Friend.builder().user(sender).friend(receiver).build());
-        friendRepository.save(Friend.builder().user(receiver).friend(sender).build());
-        friendRequestRepository.delete(friendRequest);
-    }
-
-    public void rejectFriendRequest(FriendRejectRequest request) {
-        User receiver = userRepository.findById(request.getReceiverId())
-                .orElseThrow(() -> new CustomException(ErrorCode.USER_NOT_FOUND));
-
-        FriendRequest friendRequest = friendRequestRepository.findById(request.getRequestId())
-                .orElseThrow(() -> new CustomException(ErrorCode.USER_NOT_FOUND));
-
-        if (!friendRequest.getReceiver().getId().equals(receiver.getId())) {
-            throw new CustomException("요청 수신자와 사용자 정보가 일치하지 않습니다.");
+        if (!fr.getReceiver().equals(receiver)) {
+            throw new CustomException("요청 대상 불일치");
         }
 
-        friendRequestRepository.delete(friendRequest);
+        friendRepository.save(Friend.of(fr.getSender(), receiver));
+        friendRepository.save(Friend.of(receiver, fr.getSender()));
+        friendRequestRepository.delete(fr);
     }
 
-    public FriendListResponse getFriendList(Long userId) {
-        User me = userRepository.findById(userId).orElseThrow(() -> new CustomException(ErrorCode.USER_NOT_FOUND));
-        List<Friend> friends = friendRepository.findAllFriendsOfUser(me);
+    /** ✅ 친구 요청 거절 */
+    public void rejectFriendRequest(FriendRejectRequest request) {
+        User receiver = getUser(request.getUserId());
+        FriendRequest fr = getFriendRequestById(request.getRequestId());
 
-        return new FriendListResponse(
-                friends.stream()
-                        .map(f -> f.getUser().equals(me) ? f.getFriend() : f.getUser())
-                        .distinct()
-                        .map(FriendListResponse.FriendDto::from)
-                        .collect(Collectors.toList())
-        );
+        if (!fr.getReceiver().equals(receiver)) {
+            throw new CustomException("요청 대상 불일치");
+        }
+
+        friendRequestRepository.delete(fr);
     }
 
-    public FriendRequestListResponse getReceivedFriendRequests(Long userId) {
-        User me = userRepository.findById(userId).orElseThrow(() -> new CustomException(ErrorCode.USER_NOT_FOUND));
-        List<FriendRequest> requests = friendRequestRepository.findByReceiver(me);
-        return new FriendRequestListResponse(
-                requests.stream()
-                        .map(FriendRequestListResponse.FriendRequestDto::from)
-                        .collect(Collectors.toList())
-        );
+    /** ✅ 친구 요청 취소 */
+    public void cancelSentFriendRequest(FriendCancelRequest request) {
+        User sender = getUser(request.getUserId());
+        FriendRequest fr = getFriendRequestById(request.getRequestId());
+
+        if (!fr.getSender().equals(sender)) {
+            throw new CustomException("취소 권한 없음");
+        }
+
+        friendRequestRepository.delete(fr);
     }
 
-    public SentFriendRequestListResponse getSentFriendRequests(Long userId) {
-        User me = userRepository.findById(userId).orElseThrow(() -> new CustomException(ErrorCode.USER_NOT_FOUND));
-        List<FriendRequest> requests = friendRequestRepository.findBySender(me);
 
-        List<SentFriendRequestListResponse.SentFriendRequestDto> result = requests.stream()
+    /** ✅ 친구 목록 조회 */
+    public FriendListResponse getFriendList(FriendBaseRequest request) {
+        User user = getUser(request.getUserId());
+        List<Friend> friends = friendRepository.findAllFriendsOfUser(user);
+
+        return new FriendListResponse(friends.stream()
+                .map(f -> f.getFriend().equals(user) ? f.getUser() : f.getFriend())
+                .distinct()
+                .map(FriendListResponse.FriendDto::from)
+                .toList());
+    }
+
+    /** ✅ 받은 요청 목록 */
+    public FriendRequestListResponse getReceivedFriendRequests(FriendBaseRequest request) {
+        User user = getUser(request.getUserId());
+        return new FriendRequestListResponse(friendRequestRepository.findByReceiver(user).stream()
+                .map(FriendRequestListResponse.FriendRequestDto::from)
+                .toList());
+    }
+
+    /** ✅ 보낸 요청 목록 */
+    public SentFriendRequestListResponse getSentFriendRequests(FriendBaseRequest request) {
+        User sender = getUser(request.getUserId());
+        return new SentFriendRequestListResponse(friendRequestRepository.findBySender(sender).stream()
                 .map(req -> SentFriendRequestListResponse.SentFriendRequestDto.builder()
                         .requestId(req.getId())
                         .receiverId(req.getReceiver().getId())
@@ -121,122 +112,132 @@ public class FriendService {
                         .requestedAt(req.getRequestedAt())
                         .status(req.getStatus().name())
                         .build())
-                .collect(Collectors.toList());
-
-        return new SentFriendRequestListResponse(result);
+                .toList());
     }
 
-    public void cancelSentFriendRequest(Long requestId, Long senderId) {
-        User me = userRepository.findById(senderId).orElseThrow(() -> new CustomException(ErrorCode.USER_NOT_FOUND));
-        FriendRequest request = friendRequestRepository.findById(requestId)
-                .orElseThrow(() -> new CustomException("요청이 존재하지 않습니다."));
+    /** ✅ 친구 삭제 */
+    public void deleteFriend(FriendDeleteRequest request) {
+        User user = getUser(request.getUserId());
+        User target = getUser(request.getFriendId());
 
-        if (!request.getSender().getId().equals(me.getId())) {
-            throw new CustomException("해당 요청을 취소할 권한이 없습니다.");
-        }
-
-        friendRequestRepository.delete(request);
+        friendRepository.findByUserAndFriend(user, target).ifPresent(friendRepository::delete);
+        friendRepository.findByUserAndFriend(target, user).ifPresent(friendRepository::delete);
     }
 
-    public FriendSearchResponse searchUsersByNickname(String nickname, Long userId) {
-        User me = userRepository.findById(userId).orElseThrow(() -> new CustomException(ErrorCode.USER_NOT_FOUND));
-        List<User> users = userRepository.findByNicknameContaining(nickname);
+    /** ✅ 차단 */
+    public void blockUser(FriendBlockRequest request) {
+        User me = getUser(request.getUserId());
+        User target = getUser(request.getTargetUserId());
 
-        return new FriendSearchResponse(
-                users.stream()
-                        .filter(user -> !user.getId().equals(me.getId()))
-                        .map(user -> {
-                            boolean alreadyFriend = friendRepository.existsByUserAndFriend(me, user)
-                                    || friendRepository.existsByUserAndFriend(user, me);
-                            boolean alreadyRequested = friendRequestRepository.existsBySenderAndReceiver(me, user);
-                            boolean isBlocked = friendBlockRepository.existsByBlockerAndBlocked(me, user);
-
-                            return new FriendSearchResponse.UserSearchResult(
-                                    user.getId(),
-                                    user.getNickname(),
-                                    user.getProfileImageUrl(),
-                                    alreadyFriend,
-                                    alreadyRequested,
-                                    isBlocked
-                            );
-                        })
-                        .toList()
-        );
-    }
-
-    public void deleteFriend(Long userId, Long friendId) {
-        User me = userRepository.findById(userId).orElseThrow(() -> new CustomException(ErrorCode.USER_NOT_FOUND));
-        User target = userRepository.findById(friendId)
-                .orElseThrow(() -> new CustomException(ErrorCode.USER_NOT_FOUND));
-
-        friendRepository.findByUserAndFriend(me, target).ifPresent(friendRepository::delete);
-        friendRepository.findByUserAndFriend(target, me).ifPresent(friendRepository::delete);
-    }
-
-    public void blockUser(Long userId, Long targetId) {
-        User me = userRepository.findById(userId).orElseThrow(() -> new CustomException(ErrorCode.USER_NOT_FOUND));
-        User target = userRepository.findById(targetId)
-                .orElseThrow(() -> new CustomException(ErrorCode.USER_NOT_FOUND));
-
-        if (me.getId().equals(target.getId())) {
-            throw new CustomException("자기 자신은 차단할 수 없습니다.");
-        }
+        validateNotSelf(me, target);
 
         if (friendBlockRepository.findByBlockerAndBlocked(me, target).isEmpty()) {
-            friendBlockRepository.save(FriendBlock.builder()
-                    .blocker(me)
-                    .blocked(target)
-                    .build());
+            friendBlockRepository.save(FriendBlock.builder().blocker(me).blocked(target).build());
         }
 
-        deleteFriend(userId, targetId);
+        deleteFriend(FriendDeleteRequest.builder()
+                .userId(me.getId())
+                .friendId(target.getId())
+                .build());
     }
 
-    public void unblockUser(Long userId, Long targetId) {
-        User me = userRepository.findById(userId).orElseThrow(() -> new CustomException(ErrorCode.USER_NOT_FOUND));
-        User target = userRepository.findById(targetId)
-                .orElseThrow(() -> new CustomException(ErrorCode.USER_NOT_FOUND));
+    /** ✅ 차단 해제 */
+    public void unblockUser(FriendBlockRequest request) {
+        User me = getUser(request.getUserId());
+        User target = getUser(request.getTargetUserId());
 
-        friendBlockRepository.findByBlockerAndBlocked(me, target)
-                .ifPresent(friendBlockRepository::delete);
+        friendBlockRepository.findByBlockerAndBlocked(me, target).ifPresent(friendBlockRepository::delete);
     }
 
-    public BlockedFriendListResponse getBlockedUsers(Long userId) {
-        User me = userRepository.findById(userId).orElseThrow(() -> new CustomException(ErrorCode.USER_NOT_FOUND));
-        List<FriendBlock> blocks = friendBlockRepository.findByBlocker(me);
-        return new BlockedFriendListResponse(
-                blocks.stream()
-                        .map(block -> BlockedFriendListResponse.BlockedUserDto.from(block.getBlocked()))
-                        .collect(Collectors.toList())
-        );
+    /** ✅ 차단 목록 */
+    public BlockedFriendListResponse getBlockedUsers(FriendBaseRequest request) {
+        User me = getUser(request.getUserId());
+        return new BlockedFriendListResponse(friendBlockRepository.findByBlocker(me).stream()
+                .map(block -> BlockedFriendListResponse.BlockedUserDto.from(block.getBlocked()))
+                .toList());
     }
 
-    public void reportUser(Long reporterId, Long reportedUserId, ReportRequest request) {
-        if (reporterId.equals(reportedUserId)) {
+    /** ✅ 닉네임 검색 */
+    public FriendSearchResponse searchUsersByNickname(FriendSearchRequest request) {
+        User me = getUser(request.getUserId());
+        List<User> users = userRepository.findByNicknameContaining(request.getNickname());
+
+        return new FriendSearchResponse(users.stream()
+                .filter(u -> !u.equals(me))
+                .map(u -> new FriendSearchResponse.UserSearchResult(
+                        u.getId(),
+                        u.getNickname(),
+                        u.getProfileImageUrl(),
+                        isFriend(me, u),
+                        hasSentRequest(me, u),
+                        isBlocked(me, u)
+                )).toList());
+    }
+
+    /** ✅ 신고 */
+    public void reportUser(FriendReportRequest request) {
+        Long reporterId = request.getUserId();
+        Long reportedId = request.getTargetUserId();
+
+        if (reporterId.equals(reportedId)) {
             throw new CustomException("자기 자신은 신고할 수 없습니다.");
         }
 
-        User reporter = userRepository.findById(reporterId)
-                .orElseThrow(() -> new CustomException(ErrorCode.USER_NOT_FOUND));
-        User reported = userRepository.findById(reportedUserId)
-                .orElseThrow(() -> new CustomException(ErrorCode.USER_NOT_FOUND));
+        User reporter = getUser(reporterId);
+        User reported = getUser(reportedId);
 
-        boolean alreadyReported = friendReportRepository
-                .findByReporterAndReported(reporter, reported)
-                .isPresent();
-
-        if (alreadyReported) {
+        if (friendReportRepository.findByReporterAndReported(reporter, reported).isPresent()) {
             throw new CustomException(ErrorCode.ALREADY_REPORTED);
         }
 
-        FriendReport report = FriendReport.builder()
+        friendReportRepository.save(FriendReport.builder()
                 .reporter(reporter)
                 .reported(reported)
                 .reason(request.getReason())
                 .status(FriendReportStatus.PENDING)
                 .reportedAt(LocalDateTime.now())
-                .build();
+                .build());
+    }
 
-        friendReportRepository.save(report);
+
+    // ===== 유틸 =====
+
+    private User getUser(Long id) {
+        return userRepository.findById(id).orElseThrow(() -> new CustomException(ErrorCode.USER_NOT_FOUND));
+    }
+
+    private FriendRequest getFriendRequestById(Long id) {
+        return friendRequestRepository.findById(id).orElseThrow(() -> new CustomException("요청이 존재하지 않습니다."));
+    }
+
+    private boolean isFriend(User me, User target) {
+        return friendRepository.existsByUserAndFriend(me, target) ||
+                friendRepository.existsByUserAndFriend(target, me);
+    }
+
+    private boolean hasSentRequest(User me, User target) {
+        return friendRequestRepository.existsBySenderAndReceiver(me, target);
+    }
+
+    private boolean isBlocked(User me, User target) {
+        return friendBlockRepository.existsByBlockerAndBlocked(me, target);
+    }
+
+    private void validateNotSelf(User user, User target) {
+        if (user.equals(target)) {
+            throw new CustomException("자기 자신에 대해 수행할 수 없습니다.");
+        }
+    }
+
+    private void validateNotAlreadyFriend(User user, User target) {
+        if (isFriend(user, target)) {
+            throw new CustomException("이미 친구입니다.");
+        }
+    }
+
+    private void validateNotAlreadyRequested(User sender, User receiver) {
+        if (hasSentRequest(sender, receiver)) {
+            throw new CustomException("이미 친구 요청을 보냈습니다.");
+        }
     }
 }
